Some unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 src/__pycache__/*
+tests/__pycache__/*
+tests/.pytest_cache/*
+dist/*
+distributed_looger.egg-info/*
+src/distributed_looger.egg-info/*
